tests/NormalTests/paczka1/small_fuzzy/46164576.err
Error in line 4: g0wxH8DYtV A163 53,9
Error in line 9: g0wxH8DYtV S851 6,5
